--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Zezo Music Player</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="Exit">Exit</string>
 
 </resources>
