--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="Exit">Exit</string>
     <string name="Search">Search</string>
+    <string name="Delete">Delete</string>
 
 </resources>
