--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="Delete_Permanently">Delete Permanently</string>
     <string name="Yes">Yes</string>
     <string name="No">No</string>
+    <string name="AddToQueue">Add To Queue</string>
 
 </resources>
