--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Music Player</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">Zezo Music Player</string>
+    <string name="zezo">zezo</string>
+    <string name="Settings">Settings</string>
     <string name="Exit">Exit</string>
     <string name="Search">Search</string>
     <string name="Delete">Delete</string>
