--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="Exit">Exit</string>
     <string name="Search">Search</string>
     <string name="Delete">Delete</string>
+    <string name="Shuffle">Shuffle</string>
     <string name="Delete_Permanently">Delete Permanently</string>
     <string name="Yes">Yes</string>
     <string name="No">No</string>
