scroll to current fix clean up

--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="Yes">Yes</string>
     <string name="No">No</string>
     <string name="AddToQueue">Add To Queue</string>
+    <string name="Talk">Talk</string>
 
 </resources>
