--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Zezo Music Player</string>
+    <string name="app_name">Zezo</string>
     <string name="zezo">zezo</string>
     <string name="Settings">Settings</string>
     <string name="Exit">Exit</string>
