most basic music folder selector

--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="No">No</string>
     <string name="AddToQueue">Add To Queue</string>
     <string name="Talk">Talk</string>
+    <string name="SetFolder">Set Folder</string>
 
 </resources>
