fixed search added coming soon text

--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="Browser">Browser</string>
     <string name="Playlist">Playlist</string>
     <string name="Queue">Queue</string>
+    <string name="ComingSoon">Coming soon...</string>
 
 </resources>
