handle folder click (not working)

--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="AddToQueue">Add To Queue</string>
     <string name="Talk">Talk</string>
     <string name="SetFolder">Set Folder</string>
-    <string name="Browser">Browser</string>
+    <string name="Folders">Folders</string>
     <string name="Playlist">Playlist</string>
     <string name="Queue">Queue</string>
     <string name="ComingSoon">Coming soon...</string>
