queue tab with remove from queue function only shuffle icon fix important stuff that should've been committed already this is like a egit bug

--- a/ZezoMusicPlayer/res/values/strings.xml
+++ b/ZezoMusicPlayer/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="Yes">Yes</string>
     <string name="No">No</string>
     <string name="AddToQueue">Add To Queue</string>
+    <string name="RemoveFromQueue">Remove From Queue</string>
     <string name="Talk">Talk</string>
     <string name="SetFolder">Set Folder</string>
     <string name="Folders">Folders</string>
