resume play bug fix, minor visual bug fixes, RENAMED PACKAGE

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Zezo</string>
+    <string name="app_name">ayco</string>
     <string name="search_hint">Search songs</string>
-    <string name="zezo">zezo</string>
+    <string name="ayco">ayco</string>
     <string name="Settings">Settings</string>
     <string name="Exit">Exit</string>
     <string name="Search">Search</string>
